# rust-inference-bench

./: .gitignore  Cargo.toml  README.md  REPORT.md  run.ps1  run.sh
crates/embed-burn/: Cargo.toml
crates/embed-candle/: Cargo.toml
crates/embed-candle/examples/: sanity.rs
crates/embed-candle/src/: lib.rs
crates/embed-ort/: Cargo.toml
crates/embed-ort/examples/: sanity.rs
crates/embed-ort/src/: lib.rs
pure-rust-framework/: Cargo.toml
pure-rust-framework/src/: main.rs
results/: 20260611T110919Z-Daeuns-MacBook-Pro.json  cpu-20260611T115331Z-Daeuns-MacBook-Pro.json  cpu-20260617T125551Z-Daeuns-MacBook-Pro.json  gpu-20260617T131451Z-Daeuns-MacBook-Pro.json
results/macos-arm64-apple-m4/: ep-20260626T124537Z-Daeuns-MacBook-Pro.json  secondary-20260617T132354Z-Daeuns-MacBook-Pro.json
runner/: Cargo.toml
runner/src/: main.rs
scripts/: convert_svgs.py  fetch-model.ps1  machine-key.py  plot.py  secondary.ps1  secondary.sh
