[workspace]
resolver = "2"
members = [
    "crates/embed-core",
    "crates/embed-candle",
    "crates/embed-burn",
    "crates/embed-ort",
    "runner",
    "pure-rust-framework",
]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Danna"]
repository = "https://github.com/dannaward/rust-inference-bench"

[workspace.dependencies]
anyhow = "1"
embed-core = { path = "crates/embed-core" }
embed-candle = { path = "crates/embed-candle" }
embed-burn = { path = "crates/embed-burn" }
embed-ort = { path = "crates/embed-ort" }
