[package]
name = "runner"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
embed-core.workspace = true
embed-candle.workspace = true
embed-burn.workspace = true
anyhow.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[[bench]]
name = "embedding"
harness = false
