[package]
name = "runner"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
embed-core.workspace = true
embed-candle.workspace = true
embed-burn.workspace = true
embed-ort.workspace = true
anyhow.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# Per-engine GPU backends, composed into the OS bundles below. bench `gpu` mode
# picks up whichever of these are compiled in (worklog 12).
candle-metal = ["embed-candle/metal"]
candle-cuda = ["embed-candle/cuda"]
burn-wgpu = ["embed-burn/wgpu"]
ort-coreml = ["embed-ort/coreml"]
ort-cuda = ["embed-ort/cuda"]

# OS GPU bundles selected by run.sh `--gpu <backend>`.
gpu-macos = ["candle-metal", "burn-wgpu", "ort-coreml"] # Metal / wgpu / CoreML
gpu-cuda = ["candle-cuda", "burn-wgpu", "ort-cuda"]     # NVIDIA: CUDA / wgpu / CUDA
gpu-wgpu = ["burn-wgpu"]                                 # portable Vulkan/DX12; candle+ort stay CPU
gpu = ["gpu-macos"]                                      # back-compat alias for the old macOS-only name

# CPU BLAS overrides passed through from run.sh `--blas` (non-macOS; macOS uses
# Accelerate automatically). mkl -> Candle Intel BLAS; openblas -> Burn OpenBLAS.
blas-mkl = ["embed-candle/mkl"]
blas-openblas = ["embed-burn/openblas"]

# Cross-platform ORT execution-provider matrix (worklog 08). Run `bench ep` with
# one or more of these enabled; ort-cpu is always the baseline. Only ep-xnnpack
# / ep-coreml build on this Mac — the rest build on their target platform.
ep-xnnpack = ["embed-ort/xnnpack"]
ep-coreml = ["embed-ort/coreml"]
ep-directml = ["embed-ort/directml"]
ep-openvino = ["embed-ort/openvino"]
ep-cuda = ["embed-ort/cuda"]
ep-nnapi = ["embed-ort/nnapi"]

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[[bin]]
name = "single_ort"
path = "src/bin/single_ort.rs"

[[bench]]
name = "embedding"
harness = false

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]
