[package]
name = "embed-burn"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
wgpu = ["burn/wgpu"]

[dependencies]
embed-core.workspace = true
anyhow.workspace = true
burn = { version = "0.21", features = ["ndarray", "accelerate"] }
burn-store = "0.21"
tokenizers = "0.21"
hf-hub = "0.4"

[build-dependencies]
burn-import = "0.21"
