[package]
name = "embed-candle"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]

[dependencies]
embed-core.workspace = true
anyhow.workspace = true
candle-core = { version = "0.9", features = ["accelerate"] }
candle-nn = { version = "0.9", features = ["accelerate"] }
candle-transformers = "0.9"
tokenizers = "0.21"
hf-hub = "0.4"
serde_json = "1"
